[package]
name = "starfoundry_lib-worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.42"
prometheus-client = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
warp = { version = "0.4.2", features = ["server"] }
