[package]
name = "starfoundry_lib-worker"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.44"
prometheus-client = "0.24.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "postgres", "uuid", "json", "sqlx-toml"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.2", features = ["serde", "v7"] }
warp = { version = "0.4.3", features = ["server"] }
