[package]
name = "generator"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
oas3 = "0.16.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter", "json"] }
