[package]
name = "starfoundry_bin-api_old"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
headers = "0.4.1"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
prometheus-client = "0.23.1"
rand = "0.9.1"
rand_chacha = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "system-proxy", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-rustls", "postgres", "uuid", "json"] }
starfoundry_lib-appraisal = { path = "../libs/appraisal" }
starfoundry_lib-eve_api = { path = "../libs/eve_api" }
starfoundry_lib-items = { path = "../libs/items" }
starfoundry_lib-notification = { path = "../libs/notification" }
starfoundry_lib-projects = { path = "../libs/projects" }
starfoundry_lib-structures = { path = "../libs/structures" }
starfoundry_lib-types = { path = "../libs/types" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["uuid", "yaml"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
warp = "0.3.7"

[features]
# enables special routes
test = []
appraisal = []
